# chessryba

./: CMakeLists.txt  README.md
include/: array2d.h  async_random.h  board.h  bush.h  game.h  hashset.h  output.h  piece.h  task.h
include/pieces/: bishop.h  king.h  knight.h  pawn.h  queen.h  rook.h
src/: array2d.cpp  board.cpp  bush.cpp  main.cpp  output.cpp  piece.cpp
